--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	<div id="controls">
         <input id="pac-input" class="controls" type="text" placeholder="Buscar">
-        <button><a id="geo" onClick="geoLoc()">Tu ubicación</a></button>
+        <button><a id="geo" onClick="geoLoc()">Tu culaaaa</a></button>
         <button><a id="submit">Guardar</a></button>
         <button><a id="erase" onClick="deleteMarkers()">Borrar</a></button>
     </div>
